Fixing reponsive look of timer on ios safari

--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -38,7 +38,7 @@ nav {
 .container {
   min-height: 300px;
   max-width: 966px;
-  margin: 75px auto 0px auto;
+  margin: 65px auto 0px auto;
 }
 
 /* buttons */
@@ -126,8 +126,7 @@ nav {
     text-align: center;
     input {
       float: left;
-      padding-left: 0px;
-      padding-right: 0px;
+      padding: 0px;
       border: none;
       margin-top: 5px;
     }
